_sass/default.scss
body {
  margin: 0;
  display: flex;
  flex-direction: column;
}

a {
  text-decoration: none;
}

main {
  margin-top: $navbar-height;
  @include flex-vertical;
}

.page-content {
  padding: $spacer-l;
}

.page-header-background {
  height: $header-size;
  width: 100vw;
  z-index: -1;
  position: absolute;
  top: $navbar-height;
  background-size: 200%;
  background-repeat: no-repeat;
  background-position: center center;
}

.page-header {
  color: white;
  padding: 0 $spacer-l;
  height: $header-size;
  @include flex-vertical;
  justify-content: center;
}

.page-end {
  background-size: 200%;
  background-repeat: no-repeat;
  background-position: center center;
  height: 1.5 * $navbar-height;
}

